# ubuntu-server-netboot

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  ubuntu-server-netboot  ubuntu-server-netboot.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
autoinstall/: README.md  basic.yaml
usn/: ubuntu_server_netboot.py  usn.py
usn/tests/: test_grub_cfg.py
usn/tests/data/: grub_expected.cfg  grub_ubuntu-20.04.2-live-server-arm64.cfg
