[tool.poetry]
name = "usn"
version = "0.1.0"
description = "This utility generates a netboot directory tree from an Ubuntu Server Live ISO image, an image based on the subiquity installer."
authors = ["Taihsiang Ho (tai271828) <taihsiang.ho@canonical.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ubuntu-server-netboot = "usn.usn:ubuntu_server_netboot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
